cambios en index line93 y js line25

--- a/index.html
+++ b/index.html
@@ -92,15 +92,15 @@
 
       <!-- Focos Ecogénicos -->
       <div class="form-section">
-        <label>FOCO ECOGÉNICOS (Seleccione todas las opciones que correspondan):</label>
-        <div class="option">
-          <input type="checkbox" name="focos" value="-1"> Artefactos de cola de cometa
+        <label>FOCO ECOGÉNICOS (Elija 1):</label><!-- cambio a solo 1 -->
+        <div class="option"><!-- checkbox  a radio para solo una opcion-->
+          <input type="radio" name="focos" value="-1"> Artefactos de cola de cometa
         </div>
         <div class="option">
-          <input type="checkbox" name="focos" value="1"> Microcalcificaciones
+          <input type="radio" name="focos" value="1"> Microcalcificaciones
         </div>
         <div class="option">
-          <input type="checkbox" name="focos" value="0"> Ninguno
+          <input type="radio" name="focos" value="0"> Ninguno
         </div>
         
       </div>
